cmake_minimum_required(VERSION 3.13)
project(Filler C)

set(CMAKE_C_STANDARD 99)
add_definitions( "-Wall -Wextra -Werror" )
AUX_SOURCE_DIRECTORY(libft LIB)
add_executable(Filler ${LIB} main.c filler.h
        libft/srcs/ft_atoi.c
        libft/srcs/ft_bzero.c
        libft/srcs/ft_contmaxlst.c
        libft/srcs/ft_contminlst.c
        libft/srcs/ft_elemmaxarr.c
        libft/srcs/ft_elemminarr.c
        libft/srcs/ft_isalnum.c
        libft/srcs/ft_isalpha.c
        libft/srcs/ft_isascii.c
        libft/srcs/ft_isdigit.c
        libft/srcs/ft_isprint.c
        libft/srcs/ft_itoa_base_ll_ed.c
        libft/srcs/ft_itoa_base_ull_ed.c
        libft/srcs/ft_itoa.c
        libft/srcs/ft_itoa_base.c
        libft/srcs/ft_lstadd.c
        libft/srcs/ft_lstdel.c
        libft/srcs/ft_lstdelone.c
        libft/srcs/ft_lstiter.c
        libft/srcs/ft_lstmap.c
        libft/srcs/ft_lstnew.c
        libft/srcs/ft_lstprint.c
        libft/srcs/ft_malloc_sz.c
        libft/srcs/ft_memalloc.c
        libft/srcs/ft_memccpy.c
        libft/srcs/ft_memchr.c
        libft/srcs/ft_memcmp.c
        libft/srcs/ft_memcpy.c
        libft/srcs/ft_memdel.c
        libft/srcs/ft_memmove.c
        libft/srcs/ft_memset.c
        libft/srcs/ft_putchar.c
        libft/srcs/ft_putchar_fd.c
        libft/srcs/ft_putendl.c
        libft/srcs/ft_putendl_fd.c
        libft/srcs/ft_putnbr.c
        libft/srcs/ft_putnbr_fd.c
        libft/srcs/ft_putstr.c
        libft/srcs/ft_putstr_fd.c
        libft/srcs/ft_strcat.c
        libft/srcs/ft_strchr.c
        libft/srcs/ft_strclr.c
        libft/srcs/ft_strcmp.c
        libft/srcs/ft_strcpy.c
        libft/srcs/ft_strdel.c
        libft/srcs/ft_strdup.c
        libft/srcs/ft_strdub_free.c
        libft/srcs/ft_strequ.c
        libft/srcs/ft_striter.c
        libft/srcs/ft_striteri.c
        libft/srcs/ft_strjoin.c
        libft/srcs/ft_strjoin_free.c
        libft/srcs/ft_strlcat.c
        libft/srcs/ft_strlen.c
        libft/srcs/ft_strmap.c
        libft/srcs/ft_strmapi.c
        libft/srcs/ft_strncat.c
        libft/srcs/ft_strncmp.c
        libft/srcs/ft_strncpy.c
        libft/srcs/ft_strnequ.c
        libft/srcs/ft_strnew.c
        libft/srcs/ft_strnstr.c
        libft/srcs/ft_strrchr.c
        libft/srcs/ft_strsplit.c
        libft/srcs/ft_strstr.c
        libft/srcs/ft_strsub.c
        libft/srcs/ft_strsub_free.c
        libft/srcs/ft_strtrim.c
        libft/srcs/ft_tolower.c
        libft/srcs/ft_toupper.c
        libft/srcs/ft_swap.c
        libft/srcs/ft_power.c
        libft/srcs/ft_print_intarr.c
        libft/srcs/get_next_line.c
        libft/srcs/ft_printf/ft_assembly.c
        libft/srcs/ft_printf/ft_auxiliary.c
        libft/srcs/ft_printf/ft_auxiliary_2.c
        libft/srcs/ft_printf/ft_basic_functions.c
        libft/srcs/ft_printf/ft_color_output.c
        libft/srcs/ft_printf/ft_invalid_case.c
        libft/srcs/ft_printf/ft_major_parsing.c
        libft/srcs/ft_printf/ft_minor_parsing.c
        libft/srcs/ft_printf/ft_printf.c
        libft/srcs/ft_printf/ft_type_b.c
        libft/srcs/ft_printf/ft_type_b_auxiliary.c
        libft/srcs/ft_printf/ft_type_c.c
        libft/srcs/ft_printf/ft_type_d.c
        libft/srcs/ft_printf/ft_type_d_auxiliary.c
        libft/srcs/ft_printf/ft_type_f.c
        libft/srcs/ft_printf/ft_type_f_auxiliary.c
        libft/srcs/ft_printf/ft_type_f_auxiliary_2.c
        libft/srcs/ft_printf/ft_type_o.c
        libft/srcs/ft_printf/ft_type_o_auxiliary.c
        libft/srcs/ft_printf/ft_type_p.c
        libft/srcs/ft_printf/ft_type_p_auxiliary.c
        libft/srcs/ft_printf/ft_type_s.c
        libft/srcs/ft_printf/ft_type_s_auxiliary.c
        libft/srcs/ft_printf/ft_type_u.c
        libft/srcs/ft_printf/ft_type_u_auxiliary.c
        libft/srcs/ft_printf/ft_type_x.c
        libft/srcs/ft_printf/ft_type_x_auxiliary.c
        libft/srcs/ft_printf/ft_type_r.c
        libft/srcs/ft_printf/ft_type_r_auxiliary.c
        libft/srcs/ft_printf/ft_valid_case.c auxiliary.c game.c free.c get_data.c heatmap.c update_data.c)
link_libraries(libft/libft.a)